# fract-ol

./: CMakeLists.txt  Makefile  color.c  fractal.c  fractol  fractol.h  help.c  mouse.c
ft_printf_git/: Makefile  ft_printf.h  ft_printf.h.gch  ldoublf.c
ft_printf_git/libft/: get_next_line.h
minilibx/: fdf_one.c
